scroll finally stops on dragging a piece by setting overflow to hidden and using the window scroll event to scroll.

--- a/components/ScheduleGrid/ScheduleGrid.module.scss
+++ b/components/ScheduleGrid/ScheduleGrid.module.scss
@@ -1,5 +1,4 @@
 .gridWrapper {
-  overflow-y: scroll;
   height: 60%;
   width: 100%;
   display: block;
